Jython NEWS

Jython 2.7a3
  Bugs Fixed
    - [ 1309 ] Server sockets do not support client options and propagate them to 'accept'ed client sockets.
    - [ 1951 ] Bytecode Interpreter stack optimization for larger arguments
    - [ 1894 ] bytearray does not support '+' or .join()
    - [ 1921 ] compiler module broken in Jython 2.7 
    - [ 1920 ] Backport CO_FUTURE_PRINT_FUNCTION to Lib/compiler/pycodegen.py
    - [ 1914 ] Float formatting broken in many non-English locales in Jython 2.7
    - [ 1909 ] attrgetter does not parse dotted attributes
    - [ 1924 ] Implement operator.methodcaller
    - [ 1934 ] Break itertools.compress into a separate class 
    - [ 1933 ] Break itertools.cycle into a separate class
    - [ 1932 ] Make check for iterability in chain() arguments lazy
    - [ 1931 ] Check that there are exactly 2 filter args
    - [ 1913 ] Support short -W options
    - [ 1897 ] 2.7.0ax only has partial ssl support
    - array_class in jarray module returns the "Array of a type" class
  New Features
    - bytearray complete
    - a buffer API
    - memoryview
    - bz2 module

Jython 2.7a2
    - [ 1892 ] site-packages is not in sys.path

Jython 2.7a1
  Bugs Fixed
    - [ 1880 ] Sha 224 library not present in Jython

Jython 2.5.3rc1
    - [ 1952 ] __import__(): Handling of non-dict globals argument incompatible with CPython
    - [ 1900 ] Python imports from Java cause some Python imports to fail

Jython 2.5.3b3
  Bugs Fixed
    - [ 1754 ] modjy does not provide appropriate wsgi.input file-like object

Jython 2.5.3b2
  Bugs Fixed
    - [ 1908 ] Patch for 'Unmapped exception: java.net.NoRouteToHostException'
    - [ 1871 ] Relative import in module gets imported to top level (regression)
    - [ 1854 ] set().pop() race condition
    - [ 1730 ] functools.partial incorrectly makes __doc__ property readonly
    - [ 1537 ] expat: org.python.apache.xerces.parsers.SAXParser
    - [ 1268 ] SAX parsers wants to load external DTDs, causing an exception